--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
-
-# Elastic Beanstalk Files
+.idea
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
-
-# Pub
-packages
+.pub
 .packages
 pubspec.lock
